--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 ---
-os:
-  - linux
 install:
   - cpanm --notest Test::WriteVariants Config::AutoConf Carp App::mymeta_requires inc::latest JSON::PP
   - perl Makefile.PL
   - make manifest
-  - mymeta-requires --runtime --build --test --configure --develop --recommends --suggests | cpanm --notest --skip-satisfied
+  - mymeta-requires --runtime --build --test --configure --develop --recommends --suggests | cpanm --notest
 language: perl
 perl:
+  - "5.24-shrplib"
   - "5.24"
+  - "5.22-shrplib"
   - "5.22"
-  - "5.21"
+  - "5.20-shrplib"
   - "5.20-extras"
   - "5.20"
+  - "5.18-shrplib"
   - "5.18-extras"
   - "5.18"
   - "5.16"
