--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "t"]
 	path = t
-	url = git@github.com:perl5-utils/Test-List-MoreUtils.git
+	url = https://github.com/perl5-utils/Test-List-MoreUtils.git
