--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 ---
 install:
-  - cpanm --notest Test::WriteVariants Config::AutoConf Carp App::mymeta_requires inc::latest JSON::PP
+  - cpanm --notest --with-recommends --with-suggests Test::WriteVariants Config::AutoConf Carp inc::latest JSON::PP
   - perl Makefile.PL
   - make manifest
-  - mymeta-requires --runtime --build --test --configure --develop --recommends --suggests | cpanm --notest
+  - cpanm --notest --with-recommends --with-suggests --with-develop --installdeps .
 language: perl
 perl:
   - "5.24-shrplib"
@@ -20,3 +20,4 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+  - "5.8"
