XS.xs: add function samples based on RT#106401
Add implementation for wish for samples as described in RT#106401.
Add test for function time() and according headers for random seed
initialization when required.

Exclude LMUconfig.h from repository/MANIFEST ...

Signed-off-by: Jens Rehsack <sno@netbsd.org>

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ Build
 !Build/
 Build.bat
 .last_cover_stats
+List-MoreUtils-XS-*
+LMUconfig.h
 Makefile
 Makefile.old
 MANIFEST
@@ -22,4 +24,3 @@ inc/inc_*
 inc/latest*
 t/pureperl/
 t/xs/
-List-MoreUtils-XS-*
