.travis.yml: force updating broken lmu in travis
Some of Travis perls come with a bundled List::MoreUtils, which is
incompatible to recent List::MoreUtils::XS. Force an update of the
broken one to keep Test::Perl::Critic running ...

Signed-off-by: Jens Rehsack <sno@netbsd.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ install:
   - cpanm --notest --with-recommends --with-suggests Test::WriteVariants Config::AutoConf Carp inc::latest JSON::PP
   - perl Makefile.PL
   - make manifest
+  - cpanm --notest List::MoreUtils
   - cpanm --notest --with-recommends --with-suggests --with-develop --installdeps .
 language: perl
 perl:
