.travis.yml: ensure PERL_USE_UNSAFE_INC=0
Export PERL_USE_UNSAFE_INC overall during travis test run to ensure the
entire build process is sane wrt. "." in @INC

Signed-off-by: Jens Rehsack <sno@netbsd.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+env:
+  - PERL_USE_UNSAFE_INC=0
 install:
   - cpanm --notest --with-recommends --with-suggests Test::WriteVariants Config::AutoConf Carp inc::latest JSON::PP
   - perl Makefile.PL
